; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_msg_hash.c_msg_hash_to_str.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_msg_hash.c_msg_hash_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"null\00", align 1
@uint_user_language = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @msg_hash_to_str(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* null, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @string_is_equal(i8* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %7
  %12 = load i8*, i8** %4, align 8
  store i8* %12, i8** %2, align 8
  br label %16

13:                                               ; preds = %7, %1
  %14 = load i32, i32* %3, align 4
  %15 = call i8* @msg_hash_to_str_us(i32 %14)
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i32 @string_is_equal(i8*, i8*) #1

declare dso_local i8* @msg_hash_to_str_us(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
